# prolog-jupyter-kernel

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
notebooks/: Using_Jupyter_Notebooks_with_SWI-Prolog.ipynb
notebooks/feature_introduction/sicstus/: prolog_kernel_config.py  using_jupyter_notebooks_with_sicstus_prolog.ipynb
notebooks/feature_introduction/swi/: test.pl  using_jupyter_notebooks_with_swi_prolog.ipynb
notebooks/nbgrader_example/: gradebook.db
notebooks/nbgrader_example/introduction_to_logic_programming/: gradebook.db  nbgrader_config.py
notebooks/sicstus/: Using_Jupyter_Notebooks_with_SICStus_Prolog.ipynb  prolog_kernel_config.py
notebooks/slides/: A Jupyter Kernel for Prolog.ipynb
prolog_kernel/: __init__.py  __main__.py  install.py  kernel.py  prolog_kernel_base_implementation.py  prolog_kernel_config.py  sicstus_kernel_implementation.py  swi_kernel.py  swi_kernel_implementation.py
prolog_kernel/kernelspec/: kernel.js  kernel.json
prolog_kernel/prolog_server/: jsonrpc.pl  jsonrpc_server.pl  jsonrpc_server_tests.pl  jupyter.pl  jupyter_jsonrpc.pl  jupyter_logging.pl  jupyter_preferences.pl  jupyter_query_handling.pl  jupyter_request_handling.pl  jupyter_server.pl  jupyter_server_tests.pl  jupyter_term_handling.pl  jupyter_tools.pl  jupyter_variable_bindings.pl  logging.pl  output.pl  request_handling.pl  term_handling.pl  test.pl  variable_bindings.pl
prolog_server/: jsonrpc.pl  jsonrpc_server.pl  jsonrpc_server_tests.pl  jupyter.pl  logging.pl  output.pl  request_handling.pl  term_handling.pl  test.pl
(+11 files in other folders)
