[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.0"
]

[project]
name = "prolog_kernel"
version = "0.0.9"
authors = [ { name="Anne Brecklinghaus" } ]
description = "Extensible Jupyter kernel for (SWI- and SICStus) Prolog"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
dependencies = [
  "jupyter_client",
  "IPython",
  "ipykernel",
  "graphviz",
  "beautifulsoup4",
]

[project.scripts]
prolog_kernel = "prolog_kernel.__main__:entry_point"

[project.urls]
"Homepage" = "https://github.com/anbre/prolog-jupyter-kernel"
